# trajectory_planning_demo

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTALL.md  QUICKSTART.md  README.md  REFERENCE.md  requirements.txt
include/: onnxruntime_headers.cmake
models/: trajectory_planner.onnx.data
scripts/: activate.sh  install_onnxruntime.sh  quick_start.sh  run_all.sh  run_with_venv.sh  setup_env.sh  setup_ubuntu.sh  test_model.py
src/: dataset.py  export_onnx.py  inference.cpp  inference_simple.cpp  model.py  train.py
